<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.example.sawa.techretreatdemo.SearchActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:text="Your Resturants"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/bb1"
                android:layout_width="fill_parent"
                android:layout_height="125dp"
                android:text="@string/rest1"/>

            <Button
                android:id="@+id/bb2"
                android:layout_width="fill_parent"
                android:layout_height="125dp"
                android:text="@string/rest2" />
            <Button
                android:id="@+id/bb3"
                android:layout_width="fill_parent"
                android:layout_height="125dp"
                android:text="@string/rest3"/>
            <Button
                android:id="@+id/bb4"
                android:layout_width="fill_parent"
                android:layout_height="125dp"
                android:text="@string/rest4"/>
            <Button
                android:id="@+id/bb5"
                android:layout_width="fill_parent"
                android:layout_height="125dp"
                android:text="@string/rest5"/>
            <Button
                android:id="@+id/bb6"
                android:layout_width="fill_parent"
                android:layout_height="125dp"
                android:text="@string/rest6"/>
            <Button
                android:id="@+id/bb7"
                android:layout_width="fill_parent"
                android:layout_height="125dp"
                android:text="@string/rest7"/>
            <Button
                android:id="@+id/bb8"
                android:layout_width="fill_parent"
                android:layout_height="125dp"
                android:text="@string/rest8"/>
            <Button
                android:id="@+id/bb9"
                android:layout_width="fill_parent"
                android:layout_height="125dp"
                android:text="@string/rest9"/>
            <Button
                android:id="@+id/bb10"
                android:layout_width="fill_parent"
                android:layout_height="125dp"
                android:text="@string/rest10"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>